opam-version: "2.0"
maintainer: "Vincent Bernardoff <vb@luminar.eu.org>"
authors: ["Vincent Bernardoff <vb@luminar.eu.org>"]
homepage: "https://github.com/vbmithr/ocaml-kx"
license: "ISC"
dev-repo: "git+https://github.com/vbmithr/ocaml-kx.git"
bug-reports: "https://github.com/vbmithr/ocaml-kx/issues"
tags: []
depends: [
  "dune" {>= "1.11.4"}
  "kx" {= version}
  "uri-sexp" {>= "3.1.0"}
  "core" {>= "v0.12.4"}
  "async" {>= "v0.12.0"}
  "async-uri" {= version}
  "logs-async" {= version}
  "faraday-async" {>= "0.7.0"}
  "angstrom-async" {>= "0.12.1"}
  "hex" {>= "1.4.0"}
  "alcotest" {with-test & >= "0.8.5"}
  "alcotest-async" {with-test & >= "0.8.5"}
]
build: [ "dune" "build" "-j" jobs "-p" name ]
run-test: [ "dune" "runtest" "-j" jobs "-p" name ]
synopsis: "OCaml/Async client for KDB+"
description: """
"""
