opam-version: "2.0"
maintainer: "Vincent Bernardoff <vb@luminar.eu.org>"
authors: ["Vincent Bernardoff <vb@luminar.eu.org>"]
homepage: "https://github.com/deepmarker/ocaml-kx"
license: "ISC"
dev-repo: "git+https://github.com/deepmarker/ocaml-kx.git"
bug-reports: "https://github.com/deepmarker/ocaml-kx/issues"
tags: []
depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "1.11.4"}
  "kx"
  "uri-sexp" {>= "3.1.0"}
  "core" {>= "v0.13.0"}
  "async" {>= "v0.13.0"}
  "async-uri" {>= "0.2"}
  "logs-async" {>= "1.1"}
  "faraday-async" {>= "0.7.0"}
  "angstrom-async" {>= "0.12.1"}
  "hex" {>= "1.4.0"}
  "alcotest" {with-test & >= "1.0.1"}
  "alcotest-async" {with-test & >= "1.0.1"}
]
pin-depends: [
  ["dataframe.dev" "git+https://github.com/deepmarker/ocaml-dataframe.git"]
  ["kx.dev" "git+https://github.com/deepmarker/ocaml-kx.git"]
]
build: [ "dune" "build" "-j" jobs "-p" name ]
run-test: [ "dune" "runtest" "-j" jobs "-p" name ]
synopsis: "OCaml/Async client for KDB+"
description: """
"""
