opam-version: "2.0"
maintainer: "Vincent Bernardoff <vb@luminar.eu.org>"
authors: ["Vincent Bernardoff <vb@luminar.eu.org>"]
homepage: "https://github.com/vbmithr/ocaml-kx"
license: "ISC"
dev-repo: "git+https://github.com/vbmithr/ocaml-kx.git"
bug-reports: "https://github.com/vbmithr/ocaml-kx/issues"
tags: []
depends: [
  "dune" {build & >= "1.1.1"}
  "uuidm" {>= "0.9.6"}
  "bigstring" {>= "0.2"}
  "ptime" {>= "0.8.4"}
]
build: [ "dune" "build" "-j" jobs "-p" name ]
synopsis: "Bindings to kdb+"
description: """
kbd+ <> OCaml connector
"""
