opam-version: "2.0"
maintainer: "Vincent Bernardoff <vb@luminar.eu.org>"
authors: ["Vincent Bernardoff <vb@luminar.eu.org>"]
homepage: "https://github.com/vbmithr/ocaml-kx"
license: "ISC"
dev-repo: "git+https://github.com/vbmithr/ocaml-kx.git"
bug-reports: "https://github.com/vbmithr/ocaml-kx/issues"
tags: []
depends: [
  "dune" {>= "1.11.4"}
  "fmt" {>= "0.8.8"}
  "dataframe" {= version}
  "sexplib" {>= "v0.12.0"}
  "uuidm" {>= "0.9.6"}
  "ptime" {>= "0.8.4"}
  "ocplib-endian" {>= "1.0"}
  "faraday" {>= "0.7.0"}
  "angstrom" {>= "0.12.1"}
]
build: [ "dune" "build" "-j" jobs "-p" name ]
run-test: [ "dune" "runtest" "-j" jobs "-p" name ]
synopsis: "OCaml client for KDB+"
description: """
"""
