(library
 (name        kx)
 (public_name kx)
 (modules Kx)
 (preprocess (pps ppx_sexp_conv))
 (synopsis "OCaml client for kdb+")
 (libraries
   hex
   dataframe
   sexplib
   fmt
   uuidm
   ptime
   uri
   ocplib-endian
   faraday
   angstrom))

(library
 (name        kx_async)
 (public_name kx-async)
 (modules Kx_async)
 (preprocess (pps ppx_sexp_conv))
 (synopsis "OCaml client for kdb+, for Jane Street's async")
 (libraries
   uri-sexp
   kx
   core
   async
   async-uri
   logs-async
   faraday-async
   angstrom-async))
