(test
 (name test)
 (modules test)
 (package kx-async)
 (preprocess (pps ppx_jane ppx_sexp_conv))
 (libraries
   hex
   kx
   kx-async
   alcotest
   alcotest-async))

(executables
 (names sub)
 (public_names sub)
 (modules sub)
 (preprocess (pps ppx_jane ppx_sexp_conv))
 (package kx-async)
 (libraries
   logs
   core
   async
   logs-async-reporter
   kx-async))
